--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "drupal/mailsystem": "^4.3",
         "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.0",
+        "drupal/migrate_file": "^2.1",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
         "drupal/noreferrer": "^1.0",
