--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.full
     - field.field.node.article.body
+    - field.field.node.article.content_hierarchy
     - field.field.node.article.field_article_categories
     - field.field.node.article.field_article_months
     - field.field.node.article.field_article_type
@@ -29,11 +30,11 @@ dependencies:
     - field.field.node.article.layout_builder__layout
     - node.type.article
   module:
-    - datetime
     - entity_reference_revisions
     - layout_builder
     - layout_builder_restrictions
     - layout_discovery
+    - text
     - user
 third_party_settings:
   layout_builder:
@@ -52,15 +53,37 @@ third_party_settings:
           column_show_graphic_bottom: medium
           column_width: normal
         components:
-          a2133e6d-9227-4fda-911c-80a29a4f8a5b:
-            uuid: a2133e6d-9227-4fda-911c-80a29a4f8a5b
+          b65f8f78-3e30-4da5-bdad-2224e1247302:
+            uuid: b65f8f78-3e30-4da5-bdad-2224e1247302
             region: content
             configuration:
-              id: 'extra_field_block:node:article:content_moderation_control'
+              id: 'field_block:node:article:field_header'
               label_display: '0'
               context_mapping:
                 entity: layout_builder.entity
+              formatter:
+                type: entity_reference_revisions_entity_view
+                label: hidden
+                settings:
+                  view_mode: default
+                  link: ''
+                third_party_settings: {  }
             weight: 0
+            additional: {  }
+          5d5c585f-f756-42eb-8e23-8f6fd9352db0:
+            uuid: 5d5c585f-f756-42eb-8e23-8f6fd9352db0
+            region: content
+            configuration:
+              id: 'field_block:node:article:body'
+              label_display: '0'
+              context_mapping:
+                entity: layout_builder.entity
+              formatter:
+                type: text_default
+                label: above
+                settings: {  }
+                third_party_settings: {  }
+            weight: 2
             additional: {  }
         third_party_settings: {  }
   layout_builder_restrictions:
@@ -110,10 +133,24 @@ targetEntityType: node
 bundle: article
 mode: full
 content:
+  body:
+    type: text_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
+    region: content
   content_moderation_control:
     settings: {  }
     third_party_settings: {  }
     weight: -20
+    region: content
+  field_description:
+    type: basic_string
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
     region: content
   field_header:
     type: entity_reference_revisions_entity_view
@@ -122,25 +159,9 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 1
-    region: content
-  field_list_date:
-    type: datetime_time_ago
-    label: hidden
-    settings:
-      future_format: '@interval hence'
-      past_format: '@interval ago'
-      granularity: 2
-    third_party_settings: {  }
-    weight: 2
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
     weight: 0
     region: content
 hidden:
-  body: true
   content_hierarchy: true
   field_article_categories: true
   field_article_months: true
@@ -150,10 +171,10 @@ hidden:
   field_colophon_author: true
   field_colophon_editor: true
   field_colophon_photographer: true
-  field_description: true
   field_equipment: true
   field_factboxes: true
   field_graphics: true
+  field_list_date: true
   field_list_media: true
   field_location: true
   field_media_downloads: true
@@ -163,4 +184,5 @@ hidden:
   field_time: true
   langcode: true
   layout_builder__layout: true
+  links: true
   search_api_excerpt: true
