--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -74,6 +74,11 @@ module:
   menu_link_content: 0
   menu_ui: 0
   metatag: 0
+  migrate: 0
+  migrate_drupal: 0
+  migrate_file: 0
+  migrate_plus: 0
+  migrate_tools: 0
   mysql: 0
   node: 0
   noreferrer: 0
@@ -100,6 +105,7 @@ module:
   sis_almanac: 0
   sis_articles: 0
   sis_lexicon: 0
+  sis_migration: 0
   sis_news: 0
   sis_organization: 0
   sis_overview: 0
