--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -34,6 +34,7 @@ module:
   ctools: 0
   datetime: 0
   dblog: 0
+  dds_dawa: 0
   dynamic_color: 0
   dynamic_entity_reference: 0
   dynamic_key_value: 0
