--- a/config/sync/core.entity_form_display.node.dot_on_map.default.yml
+++ b/config/sync/core.entity_form_display.node.dot_on_map.default.yml
@@ -13,8 +13,13 @@ dependencies:
     - field.field.node.dot_on_map.field_season
     - field.field.node.dot_on_map.field_subject
     - field.field.node.dot_on_map.field_summary
+    - field.field.node.dot_on_map.lat
+    - field.field.node.dot_on_map.lon
+    - field.field.node.dot_on_map.sis_map_address_dawa
     - node.type.dot_on_map
   module:
+    - allowed_formats
+    - dds_dawa
     - field_group
     - file
     - text
@@ -31,7 +36,7 @@ third_party_settings:
       label: Kategorisering
       region: content
       parent_name: group_categorization_wrapper
-      weight: 3
+      weight: 15
       format_type: tabs
       format_settings:
         classes: ''
@@ -60,7 +65,7 @@ third_party_settings:
       label: Årstid
       region: content
       parent_name: group_categorization
-      weight: 8
+      weight: 9
       format_type: tab
       format_settings:
         classes: ''
@@ -105,7 +110,7 @@ third_party_settings:
       label: Kategorisering
       region: content
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: fieldset
       format_settings:
         classes: ''
@@ -118,6 +123,7 @@ third_party_settings:
         - title
         - body
         - field_summary
+        - field_contact_information
       label: Information
       region: content
       parent_name: ''
@@ -135,7 +141,7 @@ third_party_settings:
       label: Filer
       region: content
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: fieldset
       format_settings:
         classes: ''
@@ -149,7 +155,7 @@ third_party_settings:
       label: 'Mennesker & steder'
       region: content
       parent_name: group_categorization
-      weight: 9
+      weight: 10
       format_type: tab
       format_settings:
         classes: ''
@@ -164,13 +170,29 @@ third_party_settings:
       label: 'Genplant Planeten'
       region: content
       parent_name: group_categorization
-      weight: 10
+      weight: 11
       format_type: tab
       format_settings:
         classes: ''
         show_empty_fields: false
         id: ''
         formatter: closed
+        description: ''
+        required_fields: true
+    group_geolocation:
+      children:
+        - sis_map_address_dawa
+        - lat
+        - lon
+      label: Geolokation
+      region: content
+      parent_name: ''
+      weight: 1
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
         description: ''
         required_fields: true
 id: node.dot_on_map.default
@@ -186,24 +208,35 @@ content:
       rows: 9
       summary_rows: 3
       placeholder: ''
-      show_summary: false
-    third_party_settings: {  }
+      show_summary: true
+    third_party_settings:
+      allowed_formats:
+        hide_help: '0'
+        hide_guidelines: '0'
   field_class:
     type: options_buttons
     weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_contact_information:
+    type: string_textarea
+    weight: 4
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   field_files:
     type: file_generic
-    weight: 3
+    weight: 15
     region: content
     settings:
       progress_indicator: throbber
     third_party_settings: {  }
   field_location:
     type: options_buttons
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -227,7 +260,7 @@ content:
     third_party_settings: {  }
   field_subject:
     type: options_buttons
-    weight: 3
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -238,6 +271,28 @@ content:
     settings:
       rows: 5
       placeholder: ''
+    third_party_settings: {  }
+  lat:
+    type: string_textfield
+    weight: 9
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  lon:
+    type: string_textfield
+    weight: 10
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  sis_map_address_dawa:
+    type: dawa_address_autocomplete_widget
+    weight: 8
+    region: content
+    settings: {  }
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -250,7 +305,6 @@ content:
 hidden:
   created: true
   field_contact_data: true
-  field_contact_information: true
   langcode: true
   moderation_state: true
   path: true
