--- a/config/sync/field.storage.node.lat.yml
+++ b/config/sync/field.storage.node.lat.yml
@@ -1,15 +1,17 @@
-uuid: 310ffe04-8ff9-4d87-a540-0c165ce54c32
+uuid: fac1cf0c-c58f-4189-a321-d995b602e878
 langcode: da
 status: true
 dependencies:
   module:
     - node
-id: node.field_summary
-field_name: field_summary
+id: node.lat
+field_name: lat
 entity_type: node
-type: string_long
+type: string
 settings:
+  max_length: 255
   case_sensitive: false
+  is_ascii: false
 module: core
 locked: false
 cardinality: 1
