--- a/config/sync/field.storage.node.lon.yml
+++ b/config/sync/field.storage.node.lon.yml
@@ -1,15 +1,17 @@
-uuid: 310ffe04-8ff9-4d87-a540-0c165ce54c32
+uuid: abf04ef0-32a3-4a87-a52f-826441b8aca5
 langcode: da
 status: true
 dependencies:
   module:
     - node
-id: node.field_summary
-field_name: field_summary
+id: node.lon
+field_name: lon
 entity_type: node
-type: string_long
+type: string
 settings:
+  max_length: 255
   case_sensitive: false
+  is_ascii: false
 module: core
 locked: false
 cardinality: 1
