--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.class.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.class.yml
@@ -1,8 +1,12 @@
-id: sis_article_class
+id: class
 label: 'Class term migration'
+migration_tags: {}
+migration_group: migrate
+
 source:
   plugin: d7_taxonomy_term
-  bundle: glade
+  bundle: grade
+  key: migrate
 process:
   tid: term_id
   name: name
