--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.location.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.location.yml
@@ -1,8 +1,12 @@
-id: sis_article_location
+id: location
 label: 'Location term migration'
+migration_tags: {}
+migration_group: migrate
+
 source:
   plugin: d7_taxonomy_term
   bundle: place
+  key: migrate
 process:
   tid: term_id
   name: name
