--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.subject.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.subject.yml
@@ -1,8 +1,12 @@
-id: sis_article_subject
+id: subject
 label: 'Subject term migration'
+migration_tags: {}
+migration_group: migrate
+
 source:
   plugin: d7_taxonomy_term
   bundle: class
+  key: migrate
 process:
   tid: term_id
   name: name
