--- a/config/sync/filter.format.full_html.yml
+++ b/config/sync/filter.format.full_html.yml
@@ -2,8 +2,13 @@ uuid: 77152473-08a5-4f47-aba1-61ad70606fd7
 langcode: da
 status: true
 dependencies:
+  config:
+    - core.entity_view_mode.media.1_column_flex_height
+    - core.entity_view_mode.media.2_column_flex_height
+    - core.entity_view_mode.media.3_column_flex_height
   module:
     - editor
+    - media
 _core:
   default_config_hash: svejBAiBwALaC_w177xrfxgSohJVRMBWC8o2kfKabLs
 name: 'Fuld HTML'
@@ -40,6 +45,19 @@ filters:
     status: false
     weight: -10
     settings:
-      allowed_html: '<a href hreflang> <em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <s> <sup> <sub> <img src alt data-entity-type data-entity-uuid data-align data-caption> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <hr> <p> <h1> <pre>'
+      allowed_html: '<a href hreflang> <em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <s> <sup> <sub> <img src alt data-entity-type data-entity-uuid data-align data-caption> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <hr> <p> <h1> <pre> <drupal-media data-entity-type data-entity-uuid data-view-mode data-align data-caption alt title>'
       filter_html_help: true
       filter_html_nofollow: false
+  media_embed:
+    id: media_embed
+    provider: media
+    status: true
+    weight: 100
+    settings:
+      default_view_mode: 1_column_flex_height
+      allowed_view_modes:
+        1_column_flex_height: 1_column_flex_height
+        2_column_flex_height: 2_column_flex_height
+        3_column_flex_height: 3_column_flex_height
+      allowed_media_types:
+        image: image
