SIS2-197: Create template for blog pages and styling, add sis_blog_post module, change config

--- a/config/sync/block.block.pageheader.yml
+++ b/config/sync/block.block.pageheader.yml
@@ -24,4 +24,4 @@ visibility:
   request_path:
     id: request_path
     negate: true
-    pages: "/profile/*\r\n/kort"
+    pages: "/profile/*\r\n/kort\r\n/blogs/*"
