--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.upgrade_d7_file_to_media_image.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.upgrade_d7_file_to_media_image.yml
@@ -1,5 +1,4 @@
 id: upgrade_d7_file_to_media_image
-class: Drupal\migrate\Plugin\Migration
 migration_tags: {}
 migration_group: migrate
 
@@ -7,13 +6,15 @@ label: 'Migrate Media image entities'
 source:
   plugin: d7_file_by_type
   scheme: public
-  type: image
+  type:
+   - 'image/gif'
+   - 'image/jpeg'
+   - 'image/png'
   get_alt: true
   get_title: true
   constants:
-    source_base_path: /path/to/your/drupal7/webroot
+    source_base_path: 'https://www.skoven-i-skolen.dk'
   key: migrate
-
 process:
   field_media_image/target_id:
     -
