--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -20,6 +20,21 @@ targetEntityType: user
 bundle: user
 mode: compact
 content:
+  field_full_name:
+    type: string
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    weight: 1
+    region: content
+  field_summary:
+    type: basic_string
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 2
+    region: content
   user_picture:
     type: image
     label: hidden
@@ -34,8 +49,6 @@ content:
 hidden:
   field_description: true
   field_email: true
-  field_full_name: true
-  field_summary: true
   langcode: true
   member_for: true
   organization_profiles: true
