--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_blog_post/sis_blog_post.services.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_blog_post/sis_blog_post.services.yml
@@ -3,4 +3,4 @@ services:
     class: 'Drupal\sis_blog_post\Repository\BlogPostRepository'
   sis_blog_post.content_delivery_service:
     class: 'Drupal\sis_blog_post\Services\BlogPostContentDeliveryService'
-    arguments: ['@sis_blog_post.blog_post_repository']
+    arguments: ['@sis_blog_post.blog_post_repository','@entity_type.manager']
