SIS2-196: Style user profile page

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/sis.libraries.yml
@@ -460,3 +460,10 @@ searchfield:
   css:
     theme:
       dist/components/css/components/02-molecules/searchfield.css: {}
+
+user-page:
+  version: VERSION
+  css:
+    theme:
+      dist/components/css/components/03-organisms/user-page.css: {}
+
