--- a/config/sync/field.field.user.user.user_picture.yml
+++ b/config/sync/field.field.user.user.user_picture.yml
@@ -24,7 +24,7 @@ settings:
   handler_settings: {  }
   file_directory: 'pictures/[date:custom:Y]-[date:custom:m]'
   file_extensions: 'png gif jpg jpeg'
-  max_filesize: '30 KB'
+  max_filesize: '80 KB'
   max_resolution: 85x85
   min_resolution: ''
   alt_field: false
@@ -32,7 +32,7 @@ settings:
   title_field: false
   title_field_required: false
   default_image:
-    uuid: null
+    uuid: ''
     alt: ''
     title: ''
     width: null
