--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.services.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_articles/sis_articles.services.yml
@@ -5,4 +5,4 @@ services:
     class: 'Drupal\sis_articles\Services\SeasonService'
   sis_articles.content_delivery_service:
     class: 'Drupal\sis_articles\Services\ArticleContentDeliveryService'
-    arguments: ['@sis_articles.article_repository','@sis_articles.season_service']
+    arguments: ['@sis_articles.article_repository','@sis_articles.season_service', '@entity_type.manager']
