--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         "drupal/layout_builder_restrictions": "^2.0",
         "drupal/linkit": "^6.0.0-beta2",
         "drupal/mailsystem": "^4.3",
+        "drupal/media_library_bulk_upload": "^1.0@alpha",
         "drupal/menu_item_extras": "^2.16",
         "drupal/metatag": "^1.0",
         "drupal/migrate_file": "^2.1",
