SIS2-112: Add icon field to taxonomy terms

--- a/config/sync/core.entity_form_display.taxonomy_term.month.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.month.default.yml
@@ -3,7 +3,7 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.field.taxonomy_term.month.field_icon
+    - field.field.taxonomy_term.month.field_ikon
     - taxonomy.vocabulary.month
   module:
     - media_icons
@@ -23,6 +23,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_icon:
+    type: icon_widget
+    weight: 1
+    region: content
+    settings:
+      height: 64
+      width: 64
+    third_party_settings: {  }
+  field_ikon:
     type: icon_widget
     weight: 1
     region: content
