--- a/config/sync/field.field.taxonomy_term.class.field_icon.yml
+++ b/config/sync/field.field.taxonomy_term.class.field_icon.yml
@@ -1,4 +1,4 @@
-uuid: e5e6ff65-ea2e-4ff3-84be-61b2ca45b643
+uuid: 5e1cfe32-363a-4181-af01-a6f4fe827b7e
 langcode: da
 status: true
 dependencies:
@@ -11,7 +11,7 @@ id: taxonomy_term.class.field_icon
 field_name: field_icon
 entity_type: taxonomy_term
 bundle: class
-label: Ikon
+label: Icon
 description: ''
 required: false
 translatable: true
