--- a/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.upgrade_d7_file_to_media_image.yml
+++ b/webroot/sites/skoven-i-skolen.dk/modules/sis_migration/config/install/migrate_plus.migration.upgrade_d7_file_to_media_image.yml
@@ -10,6 +10,8 @@ source:
    - 'image/gif'
    - 'image/jpeg'
    - 'image/png'
+   - 'image/tiff'
+   - 'image/x-ms-bmp'
   get_alt: true
   get_title: true
   constants:
