--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.node.article.field_description
     - field.field.node.article.field_equipment
     - field.field.node.article.field_factboxes
+    - field.field.node.article.field_files
     - field.field.node.article.field_graphics
     - field.field.node.article.field_header
     - field.field.node.article.field_list_date
@@ -107,12 +108,12 @@ third_party_settings:
         - layout_onecol
         - layout_twocol_section
         - layout_threecol_section
-      blacklisted_blocks:
+      denylisted_blocks:
         'Custom block types':
           - basic
         'Inline blocks':
           - 'inline_block:basic'
-      whitelisted_blocks:
+      allowlisted_blocks:
         'Chaos Tools': {  }
         'Content fields': {  }
         Forms: {  }
@@ -173,6 +174,7 @@ hidden:
   field_colophon_photographer: true
   field_equipment: true
   field_factboxes: true
+  field_files: true
   field_graphics: true
   field_list_date: true
   field_list_media: true
