--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -28,7 +28,10 @@ dependencies:
     - field.field.node.article.field_subject
     - field.field.node.article.field_teaching_goals
     - field.field.node.article.field_time
+    - field.field.node.article.lat
     - field.field.node.article.layout_builder__layout
+    - field.field.node.article.lon
+    - field.field.node.article.sis_map_address_dawa
     - node.type.article
   module:
     - datetime
@@ -108,6 +111,9 @@ hidden:
   field_teaching_goals: true
   field_time: true
   langcode: true
+  lat: true
   layout_builder__layout: true
   links: true
+  lon: true
   search_api_excerpt: true
+  sis_map_address_dawa: true
